adds fucntionality to the code

--- a/index.css
+++ b/index.css
@@ -4,3 +4,24 @@ body {
 
 
 }
+
+// target whole class = .classname
+
+// classes were cinema and cinemayear
+
+
+.Cinema {
+
+
+
+
+}
+
+
+
+
+.cinemaYear{
+
+
+
+}
