--- a/index.css
+++ b/index.css
@@ -10,10 +10,10 @@ body {
 // classes were cinema and cinemayear
 
 
-.Cinema {
+.Cinema{
 
 
-
+font-family: 'Roboto', sans-serif;
 
 }
 
@@ -22,6 +22,10 @@ body {
 
 .cinemaYear{
 
+font-family: 'Encode Sans Condensed', sans-serif;
 
+
+
+}
 
 }
