--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Roboto');
+
 body {
   font-family: Helvetica, Arial, sans-serif
   
